--- a/src/components/VisualsLauncherChip.css
+++ b/src/components/VisualsLauncherChip.css
@@ -14,7 +14,7 @@
 }
 
 .visuals-launcher .chip-menu {
-  left: 18px;
+  left: 54px;
   top: calc(100% + 8px);
   bottom: auto;
   z-index: 5100;
